--- a/Library Management/WebContent/index.html
+++ b/Library Management/WebContent/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="bootstrap/css/cover.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
-<script src="WebContent/js/angular/angular.min.js" ></script>
+<script src="js/angular/angular.min.js" ></script>
 <script src="https://code.angularjs.org/1.5.8/angular-route.js"></script>  
 <script src="js/app.js" ></script>
 <body ng-app="libraryApp">
@@ -27,7 +27,7 @@
 	<!-- Footer-->
 	<div ng-include="'partials/footer.html'"></div>
 	<!-- Footer -->	
-<script src="WebContent/js/angular/jquery-3.1.0.min.js"></script>
+<script src="js/angular/jquery-3.1.0.min.js"></script>
 <script src="bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
