New User form and Library Management Updated.
New User form and Library Management Updated.

--- a/Library Management/WebContent/home.html
+++ b/Library Management/WebContent/home.html
@@ -16,12 +16,8 @@
 	<div ng-include="'partials/navbar.html'"></div>
 	<!-- Nav Bar -->	
 	
-	<!-- Slider -->
-	<div ng-include="'partials/slider.html'"></div>
-	<!-- Slider -->	
-	
 	<!-- BODY CONTAINER -->
-	<div ng-include="'partials/homeBody.html'"></div>
+	<div ng-include="'main-content/homeBody.html'"></div>
 	<!-- BODY CONTAINER -->	
 	
 	<!-- Footer-->
