--- a/Library Management/WebContent/index.html
+++ b/Library Management/WebContent/index.html
@@ -21,7 +21,7 @@
 	<!-- Slider -->	
 	
 	<!-- BODY CONTAINER -->
-	<div ng-include="'partials/defaultBody.html'"></div>
+	<div ng-include="'main-content/defaultBody.html'"></div>
 	<!-- BODY CONTAINER -->	
 	
 	<!-- Footer-->
